# YouTubeDownloaderCPP

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
api/: API.cpp  API.h  YouTube.cpp  YouTube.h  YouTubeToLink.cpp  YouTubeToLink.h
datatypes/: Hashmap.h  json.h
download/: DownloadManager.cpp  DownloadManager.h
gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
